<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="" /> <RadioGroup
    android:id="@+id/radioGroupOptions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <RadioButton
        android:id="@+id/radioOption1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_1" />

    <RadioButton
        android:id="@+id/radioOption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_2" />

    <RadioButton
        android:id="@+id/radioOption3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_3" />

    <RadioButton
        android:id="@+id/radioOption4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_4" />
</RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnGetHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_hint" />

    <TextView
        android:id="@+id/llmHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:text="" /> </LinearLayout>